<package format="2">
	<name>people_extraction</name>
	<version>1.0.0</version>
	<description>people_extraction package</description>
	
	<author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
	<maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
	
	<license>GPLv3</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>gazebo_ros</depend>
	<depend>people_msgs</depend>
    
</package>
